[package]
name = "upstream-u128-test" 
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
mollusk-svm = "0.7.0"
solana-instruction = "3.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
